ABM Product con interfaces

--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,27 @@
 	<name>panarquia</name>
 	<description>Demo project for Spring Boot</description>
 
+	<properties>
+		<appengine.version>1.9.42</appengine.version>
+		<gcloud.plugin.version>2.0.9.121.v20160815</gcloud.plugin.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<start-class>com.panarquia.api.PanarquiaApplication</start-class>
+		<java.version>1.8</java.version>
+		<!-- <app.id>panarquiaApi</app.id> -->
+		<!-- <app.version>1</app.version> -->
+		<!-- <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> -->
+		<!-- <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding> -->
+		<!-- <maven.compiler.source>1.7</maven.compiler.source> -->
+		<!-- <maven.compiler.target>1.7</maven.compiler.target> -->
+		<!-- <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation> -->
+		<!-- <archiveClasses>true</archiveClasses> -->
+	</properties>
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.3.5.RELEASE</version>
+<!-- 		<version>1.4.1.RELEASE</version> -->
 		<relativePath />
 	</parent>
 
@@ -36,19 +53,24 @@
 		</dependency>
 	</dependencies>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<start-class>netgloo.Application</start-class>
-		<java.version>1.8</java.version>
-	</properties>
-
+	<!-- for hot reload of the web application -->
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>com.google.appengine</groupId>
+				<artifactId>gcloud-maven-plugin</artifactId>
+				<version>${gcloud.plugin.version}</version>
+				<configuration>
+					<set_default>true</set_default>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
+
+
 
 </project>
