--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,8 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.3.5.RELEASE</version>
-<!-- 		<version>1.4.1.RELEASE</version> -->
+		<!-- <version>1.4.1.RELEASE</version> -->
+		<!-- <version>1.4.0.RELEASE</version> -->
 		<relativePath />
 	</parent>
 
@@ -43,6 +44,10 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
