--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# Dev Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost/panarquia
 spring.datasource.username=postgres
 spring.datasource.password=Globant12
@@ -5,3 +6,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
