Cambio en la interface de servicios, recibe la lista con la implementacion de la interfaz que devuelve el servicio

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Dev Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost/panarquia
 spring.datasource.username=postgres
-spring.datasource.password=Globant12
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.show-sql=true
