--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
 			<artifactId>postgresql</artifactId>
 			<version>9.4.1211.jre7</version>
 		</dependency>
+		<dependency>
+			<artifactId>commons-collections</artifactId>
+			<groupId>commons-collections</groupId>
+			<version>3.2.2</version>
+		</dependency>
 	</dependencies>
 
 	<!-- for hot reload of the web application -->
