--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,15 @@
 			<groupId>commons-collections</groupId>
 			<version>3.2.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.spockframework</groupId>
+			<artifactId>spock-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.5</version>
+		</dependency>
 	</dependencies>
 
 	<!-- for hot reload of the web application -->
